--- a/index.html
+++ b/index.html
@@ -4,98 +4,98 @@
   <meta charset="utf-8">
   <title>Нёрдс: Учебный проект Голованов А.</title>
   <link rel="stylesheet" href="css/style.css">
-  <style type="text/css">
-    .about-company__left-part {
-    }
-  </style>
 </head>
 <body>
 <header class="main-header">
   <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
   <nav class="main-nav">
-    <a class="main-nav__logo">
-      <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Nёrds">
-    </a>
-    <ul>
-      <li><a class="main-nav__item" href="#">Студия</a></li>
-      <li><a class="main-nav__item" href="#">Клиенты</a></li>
-      <li><a class="main-nav__item" href="catalog.html">Магазин</a></li>
-      <li><a class="main-nav__item" href="#">Контакты</a></li>
+    <img class="main-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Nёrds">
+    <ul class="main-nav__list">
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Студия</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Клиенты</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Магазин</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
     </ul>
   </nav>
-  <div>
-    <a class="cart" href="#">Корзина</a>
+  <div class="main-header__cart-container">
+    <a class="main-header__cart-link" href="#">Корзина</a>
   </div>
   <section class="slider">
     <h2 class="visually-hidden">Слайдер</h2>
     <ul class="slider__list">
       <li class="slider__item">
         <p class="slider__slogan">Долго, дорого, скрупулезно</p>
-        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <p class="slider__plain-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
         <a class="button slider__button button--red" href="#">Узнать больше</a>
       </li>
       <li class="slider__item">
         <p class="slider__slogan">Любим математику как никто другой</p>
-        <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+        <p class="slider__plain-text">Никакого креатива, только математические формулы для расчета идеальных
+          пропорций.</p>
         <a class="button slider__button button--red" href="#">Узнать больше</a>
       </li>
       <li class="slider__item">
         <p class="slider__slogan">Только ночь,только хардкор</p>
-        <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+        <p class="slider__plain-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
+          начинается.</p>
         <a class="button slider__button button--red" href="#">Узнать больше</a>
       </li>
     </ul>
   </section>
 </header>
-<main>
+<main class="main">
   <section class="services">
     <h2 class="visually-hidden">Типы услуг</h2>
     <ul class="services__list">
       <li class="services__item">
-        <h2>Веб-сайты</h2>
-        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-        <span class="button services__button button--red">Заказать</span>
+        <img class="services__icon" src="img/illustration-1.jpg" alt="Веб-сайты">
+        <h3 class="services__title">Веб-сайты</h3>
+        <p class="services__plain-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+        <button class="button services__button button--red" type="button">Заказать</button>
       </li>
       <li class="services__item">
-        <h2>Приложения</h2>
-        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-        <span class="button services__button button--green">Заказать</span>
+        <img class="services__icon" src="img/illustration-2.jpg" alt="Мобильные приложения">
+        <h3 class="services__title">Приложения</h3>
+        <p class="services__plain-text">Покорите топ-10 приложений в AppStore и Google Play</p>
+        <button class="button services__button button--green" type="button">Заказать</button>
       </li>
       <li class="services__item">
-        <h2>Презентации</h2>
-        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-        <span class="button services__button button--green">Заказать</span>
+        <img class="services__icon" src="img/illustration-3.jpg" alt="Презентации">
+        <h3 class="services__title">Презентации</h3>
+        <p class="services__plain-text">Вы даже не подозреваете, насколько вы изумительны!</p>
+        <button class="button services__button button--green" type="button">Заказать</button>
       </li>
     </ul>
   </section>
   <section class="about-company">
+    <h2 class="visually-hidden">О нас</h2>
     <div class="about-company__left-part">
-      <h2 class="visually-hidden">О нас</h2>
-      <p class="about-company__slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+      <b class="about-company__slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара</b>
+      <p class="about-company__plain-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+        превыше креатива. Работаем не покладая
         рук, как роботы.</p>
-      <!-- Здесь и далее решил разметить отдельным классом надписи из заглавных жирных букв. На заголовки они не тянут-->
-      <p class="small-uppercase-letters">Выполняем заказы на разработку:</p>
-      <ul>
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>
-        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      <b class="about-company__subtitle">Выполняем заказы на разработку:</b>
+      <ul class="about-company__lpart-list">
+        <li class="about-company__lpart-item">Веб-сайтов любой сложности</li>
+        <li class="about-company__lpart-item">Мобильных приложений для iOS и Android</li>
+        <li class="about-company__lpart-item">Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
     </div>
     <div class="about-company__right-part">
-      <p class="small-uppercase-letters">с 2004 года Любим точность во всем:</p>
-      <ul>
-        <li>
-          <p class="slogan">146%</p>
-          <p>Уровень самоотдачи</p>
+      <b class="about-company__subtitle about-company__subtitle--centered-condensed">с 2004 года Любим точность во
+        всем:</b><
+      <ul class="about-company__rpart-list">
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents">146<sup>%</sup></b>
+          <p class="about-company__plain-text">Уровень самоотдачи</p>
         </li>
-        <li>
-          <p class="slogan">100%</p>
-          <p>Соблюдение сроков</p>
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents">100<sup>%</sup></b>
+          <p class="about-company__plain-text">Соблюдение сроков</p>
         </li>
-        <li>
-          <p class="slogan">50%</p>
-          <p>Минимальная предоплата</p>
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents">50<sup>%</sup></b>
+          <p class="about-company__plain-text">Минимальная предоплата</p>
         </li>
       </ul>
     </div>
@@ -103,44 +103,74 @@
   <section class="parnter-logo">
     <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
     <ul class="partner-logo_list">
-      <!-- Вместо пути к картинкам пока оставил заглушки. Будем стилизовать - заменю на пути -->
-      <li class="partner-logo__item"><a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="HTML Academy" class="partner-logo__pict"></a></li>
-      <li class="partner-logo__item"><img src="img/logo-2.png" alt="Barbershop Borodinski" class="partner-logo__pict"></li>
-      <li class="partner-logo__item"><img src="img/logo-3.png" alt="Pink" class="partner-logo__pict"></li>
-      <li class="partner-logo__item"><img src="img/logo-4.png" alt="Mishka" class="partner-logo__pict"></li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img class="partner-logo__pict" src="img/logo-1.png"  alt="Сайт HTML Academy">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict" src="img/logo-2.png"  alt="Сайт Barbershop Borodinski">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict" src="img/logo-3.png" alt="Сайт Pink">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict" src="img/logo-4.png"  alt="Сайт Mishka">
+        </a>
+      </li>
     </ul>
   </section>
-  <section class="address-map">
-    <img  class="map" src="img/map.jpg" alt="Схема проезда">
-    <h2 class="visually-hidden">Контактные реквизиты</h2>
-    <div class="address-map__requisites">
-      <p class="small-uppercase-letters">NЁRDS DESIGN STUDIO</p>
-      <address class="letters--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <p class="letters--grey">тел.&nbsp;<a href="tel:+78122757575" class="address__tel letters--grey">+7 (812)
+  <section class="contacts">
+    <h2 class="visually-hidden">Как с нами связаться</h2>
+    <img class="contacts__map" src="img/map.jpg"
+         alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+    <div class="contacts__requisites">
+      <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
+      <address class="contacts__plain-text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <p class="contacts__plain-text">тел.&nbsp;<a class="contacts__tel" href="tel:+78122757575">+7 (812)
         275-75-75</a></p>
-      <span class="button address-map__button button--red">Напишите нам</span>
+      <a class="button contacts__button button--red" href="#">Напишите нам</a>
     </div>
   </section>
 </main>
 <footer class="footer">
-  <ul>
-    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/vk-icon.svg" alt="ВКонтакте"></a></li>
-    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/fb-icon.svg" alt="Facebook"></a></li>
-    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/insta-icon.svg" alt="Instagram"></a></li>
+  <ul class="footer__list">
+    <li class="footer__item">
+      <a class="footer__social-button" href="#">ВКонтакте</a>
+    </li>
+    <li class="footer__item">
+      <a class="footer__social-button" href="#">Facebook</a>
+    </li>
+    <li class="footer__item">
+      <a class="footer__social-button" href="#">Instagram</a>
+    </li>
   </ul>
-  <p class="footer__slogan">Давайте дружить, это выгодно!</p>
-  <p>Скидка 10% для друзей из социальных сетей.</p>
+  <b class="footer__slogan">Давайте дружить, это выгодно!<br>
+    <span class="footer__slogan--plain-text">Скидка 10% для друзей из социальных сетей.</span></b>
 </footer>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
 <section class="modal-writeus">
-  <h2 class="modal-writeus__title">Напишите нам</h2>
-  <p class="modal-writeus__field-name">Ваше имя:</p>
-  <!-- Поле ввода имени -->
-  <p class="modal__field-name">Ваш e-mail:</p>
-  <!-- Поле ввода почтового адреса -->
-  <p class="modal__field-name">Текст письма:</p>
-  <!-- Поле ввода почтового адреса -->
-  <span class="modal-close">x</span>
+  <header class="modal-writeus__header">
+    <h2 class="modal-writeus__title">Напишите нам</h2>
+    <button class="modal-close" type="button">Закрыть</button>
+  </header>
+  <form class="modal-writeus__form" action="https://echo.htmlacademy.ru" method="post">
+    <label class="modal-writeus__label" for="user-name">Ваше имя: </label>
+    <input class="modal-writeus__text-field" type="text" name="user-name" id="user-name" placeholder="Имя Фамилия"
+           required aria-label="Поле ввода имени">
+    <label class="modal-writeus__label" for="user-email">Ваш e-mail: </label>
+    <input class="modal-writeus__text-field" type="email" name="user-email" id="user-email"
+           placeholder="email@example.com" required aria-label="Поле ввода email">
+    <label class="modal-writeus__label" for="user-textarea">Текст письма: </label>
+    <textarea class="modal-writeus__textarea" name="user-letter" id="user-textarea" placeholder="В свободной форме"
+              rows="3" cols="40"></textarea>
+    <button class="button  modal-writeus__submit-button button--red" type="submit">Отправить</button>
+  </form>
 </section>
 </body>
 </html>
