Add slider switchers. Correct services button to link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
         <a class="button slider__button button--red" href="#">Узнать больше</a>
       </li>
     </ul>
+    <ul class="slider__switcher-list">
+      <li class="slider__switcher-item">
+        <a href="#" class="slider__switcher-link">
+          <img class="slider__switcher-active-img" src="img/active-button.svg">
+        </a>
+      </li>
+      <li class="slider__switcher-item">
+        <a href="#" class="slider__switcher-link"></a></li>
+      <li class="slider__switcher-item">
+        <a href="#" class="slider__switcher-link"></a>
+      </li>
+    </ul>
   </section>
 </header>
 <main class="main">
@@ -51,19 +63,19 @@
         <img class="services__icon" src="img/illustration-1.jpg" alt="Веб-сайты">
         <h3 class="services__title">Веб-сайты</h3>
         <p class="services__plain-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-        <button class="button services__button button--red" type="button">Заказать</button>
+        <a class="button services__button button--red" href="#">Заказать</a>
       </li>
       <li class="services__item">
         <img class="services__icon" src="img/illustration-2.jpg" alt="Мобильные приложения">
         <h3 class="services__title">Приложения</h3>
         <p class="services__plain-text">Покорите топ-10 приложений в AppStore и Google Play</p>
-        <button class="button services__button button--green" type="button">Заказать</button>
+        <a class="button services__button button--green" href="#">Заказать</a>
       </li>
       <li class="services__item">
         <img class="services__icon" src="img/illustration-3.jpg" alt="Презентации">
         <h3 class="services__title">Презентации</h3>
         <p class="services__plain-text">Вы даже не подозреваете, насколько вы изумительны!</p>
-        <button class="button services__button button--green" type="button">Заказать</button>
+        <a class="button services__button button--green" href="#">Заказать</a>
       </li>
     </ul>
   </section>
