--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,7 @@
   <h2 class="visually-hidden">Дизайн-студия Nёrds</h2>
   <nav class="main-nav">
     <a href="index.html" class="main-nav__logo">
-      <!--<img class="main-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Nёrds">-->
-      <svg xmlns="http://www.w3.org/2000/svg" width="160" height="65" viewBox="0 0 160 65">
-        <path
-          d="M157.936 49.374c-1.235.161-2.523.271-3.757.377v.056c-2.415 17.364-26.188 20.231-26.779 6.599-.269-6.167 11.593-7.95 23.398-9.088.429-11.09-15.901 5.667-21.608-4.601-5.019-9.025 14.632-17.938 16.728-16.102 6.438 5.636 3.404 6.618-1.379 8.335-9.49 3.41-5.791 4.107-4.511 3.726 7.569-2.253 14.366-1.04 14.312 8.317 1.288-.107 2.522-.163 3.757-.271 2.306-.215 2.467 2.435-.161 2.652zm-7.514.756c-9.124 1.028-17.013 2.436-16.153 5.355 1.716 5.573 13.577 6.818 16.153-5.355zM117.678 44.918c-.682-.037-.703-6.038.112-11.688 1.005-6.951 11.935-3.357 9.093-1.906-2.975 1.52-4.429 8.718-6.266 12.087-.635 1.161-2.605 1.526-2.939 1.507zM42.105 21.002c2.376 4.866-4.937 8.171-8.292 4.521-1.398-1.555-.755-4.56 2.636-6.193 1.697-.836 4.073-1.596 5.656 1.672zM57.062 18.861c2.585 5.297-5.38 8.896-9.031 4.922-1.522-1.695-.823-4.963 2.873-6.742 1.846-.911 4.432-1.736 6.158 1.82zM28.883 61.666c-7.919 5.338-14.219 4.159-12.212-10.848 1.45-10.904-.948-11.521-3.122-9.442-2.845 2.697-4.628 9.723-4.684 16.412a50.98 50.98 0 0 0 1.004 4.776c.334 1.63-4.907 3.315-7.974 1.011C.837 62.79 0 54.865 0 44.131c0-8.824 1.171-14.895 2.23-15.175 8.029-2.191 9.312 1.348 7.583 7.981a47.637 47.637 0 0 0-1.395 7.924c1.673-4.664 4.071-8.485 6.803-10.173 7.416-4.664 13.605-2.473 12.434 6.801-2.007 16.58-2.174 18.827-.39 17.535 2.231-1.574 3.68 1.238 1.618 2.642zM54.982 59.59c-2.175 3.484-7.806 5.171-13.216 4.552-7.75-.843-12.545-7.756-10.705-18.097 2.008-11.185 18.065-18.322 23.196-10.341 3.735 5.789-2.175 16.017-11.597 19.783l-.502.168c1.951 5.171 6.579 7.476 11.039 2.36 2.119-2.36 3.624-1.348 1.785 1.575zm-13.605-7.418c5.855-4.159 7.806-13.32 6.189-15.905-1.728-2.697-5.074 1.517-6.245 11.746-.111 1.461-.111 2.865.056 4.159zM83.091 44.992c-1.597 2.507-3.903 4.384-5.966 5.059-2.398.73-5.185.056-5.185-2.698 0-1.011.892-3.372 3.624-4.721-.168-1.911-1.394-2.417-2.286-1.686-3.345 2.586-7.417 12.25-6.356 19.221.055.168.055.337.055.506.168.617.335 1.237.558 1.854.557 1.574-4.907 3.316-7.973.956-1.059-.788-1.617-6.97-1.617-17.704 0-8.824 1.951-16.636 3.011-16.917 6.412-1.743 10.147 1.292 8.14 7.249-1.171 3.373-2.23 6.801-2.843 10.399 2.453-6.688 6.523-12.872 9.812-14.501 5.856-2.923 10.092.956 8.867 7.813-.056.11-.112.393-.112.449-.056.562-.566 2.302-.39 1.741-.516 1.645-.892 2.277-1.339 2.98z"/>
-        <path
-          d="M113.207 26.161a86.988 86.988 0 0 0-1.115 7.531c-1.059 10.06-.612 18.996.613 22.986.726 2.137 3.457 4.946 6.078 2.023 2.843-3.203 5.967-1.349 2.174 2.416-2.34 2.305-6.689 3.878-11.039 3.428-3.123-.393-5.018-2.415-6.134-5.505-.444.898-.947 1.685-1.56 2.302-2.119 2.193-4.685 3.43-7.974 3.092-6.637-.73-10.538-7.923-8.699-18.153 1.952-10.791 11.319-14.725 16.728-11.857.112-1.349.223-2.699.335-4.104.055-.281.055-.562.11-.843a96.962 96.962 0 0 1-4.962.956C73.787 34.423 82.04 14.864 87.894 9.75c6.636-5.733 7.36-1.855 5.297-.562-3.68 2.36-5.297 15.905 5.241 15.905 1.729 0 3.346-.112 4.962-.281C106.685 6.49 116.665-2.391 124.75.532c8.976 3.26 8.029 17.535-11.543 25.629zm-10.928 24.393c-.224-3.542-.224-7.532-.167-11.636 0-.506.056-1.011.056-1.461-3.346-1.518-6.635 3.653-7.473 10.792-.946 8.373 2.788 12.813 4.908 10.791 1.617-1.631 2.453-6.803 2.676-8.486zm24.086-43.165c-1.784-2.642-8.307.562-12.098 14.332 9.535-4.554 13.326-12.422 12.098-14.332z"/>
-      </svg>
+      <img class="main-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Nёrds">
     </a>
     <ul class="main-nav__list">
       <li class="main-nav__item">
@@ -40,69 +34,69 @@
   <h1 class="main-header__catalog-slogan">Магазин готовых шаблонов</h1>
 </header>
 <main class="main">
-  <aside class="left-menu">
+  <aside class="filter">
     <h2 class="visually-hidden">Меню выбора</h2>
-    <form class="left-menu__filter" action="https://echo.htmlacademy.ru" method="post">
-      <fieldset class="left-menu__fieldset">
-        <legend class="left-menu__legend left-menu__legend--bottom-indent">Стоимость:</legend>
+    <form class="filter__filter" action="https://echo.htmlacademy.ru" method="post">
+      <fieldset class="filter__fieldset">
+        <legend class="filter__legend filter__legend--bottom-indent">Стоимость:</legend>
         <label class="visually-hidden" for="cost">Выбор стоимости</label>
-        <input class="left-menu__cost" type="range" id="cost" name="cost" min="0" max="99999">
-        <label class="left-menu__cost-label" for="lower-bound">От</label>
-        <input class="left-menu__range-bounds" type="number" id="lower-bound" name="lower-bound" min="0" max="99999">
-        <label class="left-menu__cost-label" for="upper-bound">До</label>
-        <input class="left-menu__range-bounds" type="number" id="upper-bound" name="upper-bound" min="0" max="99999">
+        <input class="filter__cost" type="range" id="cost" name="cost" min="0" max="99999">
+        <label class="filter__cost-label" for="lower-bound">От</label>
+        <input class="filter__range-bounds" type="number" id="lower-bound" name="lower-bound" min="0" max="99999">
+        <label class="filter__cost-label" for="upper-bound">До</label>
+        <input class="filter__range-bounds" type="number" id="upper-bound" name="upper-bound" min="0" max="99999">
       </fieldset>
-      <fieldset class="left-menu__fieldset">
-        <legend class="left-menu__legend">Сетка:</legend>
-        <ul class="left-menu__grid-list">
-          <li class="left-menu__grid-item">
-            <input class="left-menu__grid-radiobutton" type="radio" name="grid" value="adaptive" id="adaptive-grid"
+      <fieldset class="filter__fieldset">
+        <legend class="filter__legend">Сетка:</legend>
+        <ul class="filter__grid-list">
+          <li class="filter__grid-item">
+            <input class="filter__grid-radiobutton" type="radio" name="grid" value="adaptive" id="adaptive-grid"
                    aria-label="Адаптивная сетка">
-            <label class="left-menu__grid-label" for="adaptive-grid">Адаптивная</label>
+            <label class="filter__grid-label" for="adaptive-grid">Адаптивная</label>
           </li>
-          <li class="left-menu__grid-item">
-            <input class="left-menu__grid-radiobutton" type="radio" name="grid" value="fixed" id="fixed-grid"
+          <li class="filter__grid-item">
+            <input class="filter__grid-radiobutton" type="radio" name="grid" value="fixed" id="fixed-grid"
                    aria-label="Фиксированная сетка">
-            <label class="left-menu__grid-label" for="fixed-grid">Фиксированная</label>
+            <label class="filter__grid-label" for="fixed-grid">Фиксированная</label>
           </li>
-          <li class="left-menu__grid-item">
-            <input class="left-menu__grid-radiobutton" type="radio" name="grid" value="rubber" id="rubber-grid"
+          <li class="filter__grid-item">
+            <input class="filter__grid-radiobutton" type="radio" name="grid" value="rubber" id="rubber-grid"
                    aria-label="Резиновая сетка">
-            <label class="left-menu__grid-label" for="rubber-grid">Резиновая</label>
+            <label class="filter__grid-label" for="rubber-grid">Резиновая</label>
           </li>
         </ul>
       </fieldset>
-      <fieldset class="left-menu__fieldset">
-        <legend class="left-menu__legend">Особенности:</legend>
-        <ul class="left-menu__features-list">
-          <li class="left-menu__features-item">
-            <input class="left-menu__features-checkbox" type="checkbox" name="slider" id="slider-feature" checked
+      <fieldset class="filter__fieldset">
+        <legend class="filter__legend">Особенности:</legend>
+        <ul class="filter__features-list">
+          <li class="filter__features-item">
+            <input class="filter__features-checkbox" type="checkbox" name="slider" id="slider-feature" checked
                    aria-label="Слайдер">
-            <label class="left-menu__features-label" for="slider-feature">Слайдер</label>
+            <label class="filter__features-label" for="slider-feature">Слайдер</label>
           </li>
-          <li class="left-menu__features-item">
-            <input class="left-menu__features-checkbox" type="checkbox" name="advantage" id="advantage-feature"
+          <li class="filter__features-item">
+            <input class="filter__features-checkbox" type="checkbox" name="advantage" id="advantage-feature"
                    aria-label="Блок преимуществ">
-            <label class="left-menu__features-label" for="advantage-feature">Блок преимуществ</label>
+            <label class="filter__features-label" for="advantage-feature">Блок преимуществ</label>
           </li>
-          <li class="left-menu__features-item">
-            <input class="left-menu__features-checkbox" type="checkbox" name="news" id="news-feature" checked
+          <li class="filter__features-item">
+            <input class="filter__features-checkbox" type="checkbox" name="news" id="news-feature" checked
                    aria-label="Новости">
-            <label class="left-menu__features-label" for="news-feature">Новости</label>
+            <label class="filter__features-label" for="news-feature">Новости</label>
           </li>
-          <li class="left-menu__features-item">
-            <input class="left-menu__features-checkbox" type="checkbox" name="gallery" id="gallery-feature"
+          <li class="filter__features-item">
+            <input class="filter__features-checkbox" type="checkbox" name="gallery" id="gallery-feature"
                    aria-label="Галерея">
-            <label class="left-menu__features-label" for="gallery-feature">Галерея</label>
+            <label class="filter__features-label" for="gallery-feature">Галерея</label>
           </li>
-          <li class="left-menu__features-item">
-            <input class="left-menu__features-checkbox" type="checkbox" name="cart" id="cart-feature"
+          <li class="filter__features-item">
+            <input class="filter__features-checkbox" type="checkbox" name="cart" id="cart-feature"
                    aria-label="Корзина">
-            <label class="left-menu__features-label" for="cart-feature">Корзина</label>
+            <label class="filter__features-label" for="cart-feature">Корзина</label>
           </li>
         </ul>
       </fieldset>
-      <button class="button left-menu__button button--grey" type="submit">Показать</button>
+      <button class="button filter__button button--grey" type="submit">Показать</button>
     </form>
   </aside>
   <section class="catalog">
@@ -137,10 +131,10 @@
                alt="SEDONA. Информационный сайт для туристов">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link"
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link"
                                                         href="#">SEDONA</a></h3>
             <p class="product-card__pricetag-plain-text text--grey">Информационный сайт для туристов</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -151,10 +145,10 @@
                alt="PINK APP. Продуктовый лендинг приложения для iOS и Android">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link" href="#">PINK
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">PINK
               APP</a></h3>
             <p class="product-card__pricetag-plain-text text--grey">Продуктовый лендинг приложения для iOS и Android</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -165,10 +159,10 @@
                alt="BARBERSHOP. Сайт салоны красоты. Для мужчин, да.">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link" href="#">BARBERSHOP</a>
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">BARBERSHOP</a>
             </h3>
             <p class="product-card__pricetag-plain-text text--grey">Сайт салоны красоты. Для мужчин, да.</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -179,10 +173,10 @@
                alt="MISHKA. Интернет-магазин вязаных игрушек">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link"
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link"
                                                         href="#">MISHKA</a></h3>
             <p class="product-card__pricetag-plain-text text--grey">Интернет-магазин вязаных игрушек</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -193,10 +187,10 @@
                alt="A PLUS. Лендинг курсов повышения квалификации">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link" href="#">A
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">A
               PLUS</a></h3>
             <p class="product-card__pricetag-plain-text text--grey">Лендинг курсов повышения квалификации</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -207,10 +201,10 @@
                alt="КВАСТ. Промо-сайт производителя крафтового кваса">
           <!-- Всплывающий ценник -->
           <div class="product-card__pricetag">
-            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-modal-window-link"
+            <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link"
                                                         href="#">КВАСТ</a></h3>
             <p class="product-card__pricetag-plain-text text--grey">Промо-сайт производителя крафтового кваса</p>
-            <button class="button product-card__button button--red" type="button">9900 руб.</button>
+            <form class="product-card__pricetag-button" action="#" method="post"><button class="button product-card__button button--red" type="button">9900 руб.</button></form>
           </div>
         </article>
       </li>
@@ -228,7 +222,7 @@
   </section>
   <section class="contacts">
     <h2 class="visually-hidden">Как с нами связаться</h2>
-    <img class="contacts__map" src="img/map.jpg"
+    <img class="contacts__map" src="img/map.jpg" width="1440" height="416"
          alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
     <div class="contacts__requisites">
       <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
@@ -243,23 +237,23 @@
 <footer class="footer">
   <ul class="footer__list">
     <li class="footer__item">
-      <a class="footer__social-button" href="#" aria-label="Вконтакте">ВКонтакте</a>
+      <a class="footer__social-button" href="#">ВКонтакте</a>
     </li>
     <li class="footer__item">
-      <a class="footer__social-button" href="#" aria-label="Facebook">Facebook</a>
+      <a class="footer__social-button" href="#">Facebook</a>
     </li>
     <li class="footer__item">
-      <a class="footer__social-button" href="#" aria-label="Instagram">Instagram</a>
+      <a class="footer__social-button" href="#">Instagram</a>
     </li>
   </ul>
-  <b class="footer__slogan">Давайте дружить, это выгодно!<br>
-    <span class="footer__slogan--plain-text">Скидка 10% для друзей из социальных сетей.</span></b>
+  <b class="footer__slogan">Давайте дружить, это выгодно!</b>
+  <span class="footer__discount-text">Скидка 10% для друзей из социальных сетей.</span>
 </footer>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
 <section class="modal-writeus">
   <header class="modal-writeus__header">
     <h2 class="modal-writeus__title">Напишите нам</h2>
-    <button class="modal-close" type="button" aria-label="Закрыть модальное окно">Закрыть</button>
+    <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
   </header>
   <form class="modal-writeus__form" action="https://echo.htmlacademy.ru" method="post">
     <label class="modal-writeus__label" for="user-name">Ваше имя: </label>
@@ -271,7 +265,7 @@
     <label class="modal-writeus__label" for="user-textarea">Текст письма: </label>
     <textarea class="modal-form__input-item" name="user-letter" id="user-textarea" placeholder="В свободной форме"
               rows="3" cols="40" aria-label="Поле ввода текста письма"></textarea>
-    <button class="button  modal-writeus__submit-button button--red" type="submit" aria-label="Кнопка Отправить">
+    <button class="button  modal-writeus__submit-button button--red" type="submit">
       Отправить
     </button>
   </form>
