--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     </ul>
     <ul class="slider__switcher-list">
       <li class="slider__switcher-item">
-        <a href="#" class="slider__switcher-link">
-          <img class="slider__switcher-active-img" src="img/active-button.svg">
-        </a>
+        <button class="slider__switcher slider__switcher--active" type="button"></button>
+        <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
       </li>
       <li class="slider__switcher-item">
-        <a href="#" class="slider__switcher-link"></a></li>
+        <button class="slider__switcher slider__switcher--active" type="button"></button>
+      </li>
       <li class="slider__switcher-item">
-        <a href="#" class="slider__switcher-link"></a>
+        <button class="slider__switcher slider__switcher--active" type="button"></button>
       </li>
     </ul>
   </section>
@@ -61,19 +61,19 @@
     <h2 class="visually-hidden">Типы услуг</h2>
     <ul class="services__list">
       <li class="services__item">
-        <img class="services__icon" src="img/illustration-1.jpg" alt="Веб-сайты">
+        <img class="services__icon" src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
         <h3 class="services__title">Веб-сайты</h3>
         <p class="services__plain-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
         <a class="button services__button button--red" href="#">Заказать</a>
       </li>
       <li class="services__item">
-        <img class="services__icon" src="img/illustration-2.jpg" alt="Мобильные приложения">
+        <img class="services__icon" src="img/illustration-2.jpg" width="300" height="146" alt="Мобильные приложения">
         <h3 class="services__title">Приложения</h3>
         <p class="services__plain-text">Покорите топ-10 приложений в AppStore и Google Play</p>
         <a class="button services__button button--green" href="#">Заказать</a>
       </li>
       <li class="services__item">
-        <img class="services__icon" src="img/illustration-3.jpg" alt="Презентации">
+        <img class="services__icon" src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
         <h3 class="services__title">Презентации</h3>
         <p class="services__plain-text">Вы даже не подозреваете, насколько вы изумительны!</p>
         <a class="button services__button button--yellow" href="#">Заказать</a>
@@ -95,6 +95,7 @@
       </ul>
     </div>
     <div class="about-company__right-part">
+      <img src="img/studio-nerds.png" width="360" height="208" alt="Дизайн-студия Nerds">
       <b class="about-company__subtitle about-company__subtitle--centered-condensed">с 2004 года Любим точность во
         всем:</b>
       <ul class="about-company__rpart-list">
@@ -118,34 +119,35 @@
     <ul class="partner-logo__list">
       <li class="partner-logo__item">
         <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="partner-logo__pict" src="img/logo-1.png" alt="Сайт HTML Academy">
+          <img class="partner-logo__pict" src="img/logo-1.png" width="199" height="68" alt="Сайт HTML Academy">
         </a>
       </li>
       <li class="partner-logo__item">
         <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-2.png" alt="Сайт Barbershop Borodinski">
+          <img class="partner-logo__pict" src="img/logo-2.png" width="209" height="90" alt="Сайт Barbershop Borodinski">
         </a>
       </li>
       <li class="partner-logo__item">
         <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-3.png" alt="Сайт Pink">
+          <img class="partner-logo__pict" src="img/logo-3.png" width="185" height="52" alt="Сайт Pink">
         </a>
       </li>
       <li class="partner-logo__item">
         <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-4.png" alt="Сайт Mishka">
+          <img class="partner-logo__pict" src="img/logo-4.png" width="173" height="84" alt="Сайт Mishka">
         </a>
       </li>
     </ul>
   </section>
   <section class="contacts">
     <h2 class="visually-hidden">Как с нами связаться</h2>
-    <img class="contacts__map" src="img/map.jpg"
+    <img class="contacts__map" src="img/map.jpg" width="1440" height="416"
          alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
     <div class="contacts__requisites">
       <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
-      <address class="contacts__plain-text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <p class="contacts__plain-text">тел.&nbsp;<a class="contacts__tel" href="tel:+78122757575">+7 (812)
+      <address class="contacts__plain-text text--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <p class="contacts__plain-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey" href="tel:+78122757575">+7
+        (812)
         275-75-75</a></p>
       <a class="button contacts__button button--red" href="#">Напишите нам</a>
     </div>
@@ -163,14 +165,14 @@
       <a class="footer__social-button" href="#">Instagram</a>
     </li>
   </ul>
-  <b class="footer__slogan">Давайте дружить, это выгодно!<br>
-    <span class="footer__slogan--plain-text">Скидка 10% для друзей из социальных сетей.</span></b>
+  <b class="footer__slogan">Давайте дружить, это выгодно!</b>
+  <span class="footer__discount-text">Скидка 10% для друзей из социальных сетей.</span>
 </footer>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
 <section class="modal-writeus">
   <header class="modal-writeus__header">
     <h2 class="modal-writeus__title">Напишите нам</h2>
-    <button class="modal-close" type="button" aria-label="Закрыть модальное окно">Закрыть</button>
+    <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
   </header>
   <form class="modal-writeus__form" action="https://echo.htmlacademy.ru" method="post">
     <label class="modal-writeus__label" for="user-name">Ваше имя: </label>
@@ -182,7 +184,9 @@
     <label class="modal-writeus__label" for="user-textarea">Текст письма: </label>
     <textarea class="modal-form__input-item" name="user-letter" id="user-textarea" placeholder="В свободной форме"
               rows="3" cols="40" aria-label="Поле ввода текста письма"></textarea>
-    <button class="button  modal-writeus__submit-button button--red" type="submit" aria-label="Кнопка Отправить">Отправить</button>
+    <button class="button  modal-writeus__submit-button button--red" type="submit">
+      Отправить
+    </button>
   </form>
 </section>
 </body>
